--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
     "name": "svelte-gallery",
     "version": "0.1.0",
     "scripts": {
-        "dev": "svelte-kit dev --host 0.0.0.0",
-        "build": "svelte-kit build",
+        "dev": "vite dev --host 0.0.0.0",
+        "build": "vite build",
         "package": "svelte-kit package",
-        "preview": "svelte-kit preview",
+        "preview": "vite preview",
         "check": "svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
         "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-        "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+        "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+        "prepare": "svelte-kit sync"
     },
     "devDependencies": {
         "@sveltejs/adapter-node": "*",
