--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     },
     "type": "module",
     "dependencies": {
+        "blurhash": "^1.1.5",
         "dotenv": "^16.0.1",
         "fast-xml-parser": "^4.0.9",
         "highlight.js": "^11.6.0",
         "sharp": "^0.30.7",
-        "svelte-blurhash": "^1.2.1",
+        "svelte-intersection-observer": "^0.10.0",
         "svelte-markdown": "^0.2.1"
     }
 }
