--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "devDependencies": {
         "@sveltejs/adapter-node": "*",
-        "@sveltejs/kit": "^1.0.0-next.392",
+        "@sveltejs/kit": "^1.0.0-next.405",
         "@types/node": "^17.0.31",
         "@types/sanitize-html": "^2.6.1",
         "@types/sharp": "^0.30.4",
@@ -28,6 +28,7 @@
         "svelte": "^3.49.0",
         "svelte-check": "^2.8.0",
         "svelte-preprocess": "^4.10.7",
+        "ts-node": "^10.9.1",
         "tslib": "^2.3.1",
         "typescript": "^4.7.4"
     },
