--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "devDependencies": {
         "@sveltejs/adapter-node": "*",
-        "@sveltejs/kit": "^1.0.0-next.432",
+        "@sveltejs/kit": "^1.0.1",
         "@types/node": "^17.0.31",
         "@types/sanitize-html": "^2.6.1",
         "@types/sharp": "^0.30.4",
@@ -30,7 +30,8 @@
         "svelte-preprocess": "^4.10.7",
         "ts-node": "^10.9.1",
         "tslib": "^2.3.1",
-        "typescript": "^4.7.4"
+        "typescript": "^4.7.4",
+        "vite": "^4.0.3"
     },
     "type": "module",
     "dependencies": {
